Tweaks in html and js added.

--- a/index.html
+++ b/index.html
@@ -3,10 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>We are learning Git.</title>
+    <title>Document</title>
 </head>
 <body>
-    <header></header>
+    <header>
+        <h3>We are learning Git.</h3>
+        <p>Now we are learning git branch</p>
+    </header>
     <main></main>
     <footer></footer>
     
