--- a/index.html
+++ b/index.html
@@ -7,7 +7,12 @@
 </head>
 <body>
     <header></header>
-    <main></main>
+    <main>
+        <p>Added this paragraph to emerygency branch</p>
+
+        <img src="https://picsum.photos/300/300" alt="Random Image">
+
+    </main>
     <footer></footer>
     
 </body>
