--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
     <header>
         <h3>We are learning Git.</h3>
         <p>Now we are learning git branch</p>
+
+        <h2>Working on second branch</h2>
     </header>
     <main></main>
     <footer></footer>
