--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
         <p>Now we are learning git branch</p>
 
         <h2>Working on second branch</h2>
+        <h2>Working on second branch</h2>
     </header>
     <main></main>
     <footer></footer>
